cluster/gitops/kyverno/kyverno/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
specs:
  # All controllers (currently) have the same access requirements
  - description: controllers
    endpointSelector:
      matchLabels:
        app.kubernetes.io/part-of: kyverno
    egress:
      # Manage k8s resources
      - &to_kube_api_server
        toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # TODO cluster-wide policy
      # Access select identities for policy contexts
      # The ability to deploy policies already gives the ability to
      # compromise anything in the cluster, so allowing access to
      # these identities is not an additional security risk.
      - toEntities:
          - cluster
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: https
                protocol: TCP
      # Webhooks calls from the apiserver
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: https
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              # Admission controller names it "metrics-port", the rest "metrics".
              # Numeric avoids per-endpoint "unknown named port" warnings.
              - port: "8000"
                protocol: TCP
  - description: kyverno-clean-reports
    endpointSelector:
      matchLabels:
        job-name: kyverno-clean-reports
    egress:
      - *to_kube_api_server
  - description: kyverno-migrate-resources
    endpointSelector:
      matchLabels:
        job-name: kyverno-migrate-resources
    egress:
      - *to_kube_api_server
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kyverno
specs:
  - description: context-access
    enableDefaultDeny:
      egress: false
      ingress: false
    endpointSelector: {}
    ingress:
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/part-of: kyverno
